crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_dark_160x40_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-dark\", (160, 40), BackgroundMode :: Yes)"
---
Rgb(15, 14, 26): 6250
Rgb(39, 34, 62): 150
