crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_light_100x30_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-light\", (100, 30), BackgroundMode :: No)"
---
Reset: 2783
Rgb(244, 233, 222): 217
