crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_light_100x30_theme.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-light\", (100, 30), BackgroundMode :: Theme)"
---
Rgb(244, 233, 222): 113
Rgb(251, 250, 246): 2887
