crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_light_100x30_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-light\", (100, 30), BackgroundMode :: Yes)"
---
Rgb(244, 233, 222): 217
Rgb(251, 250, 246): 2783
