crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_light_160x40_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-light\", (160, 40), BackgroundMode :: No)"
---
Reset: 6250
Rgb(244, 233, 222): 150
