crates/review-buddy/tests/snapshots/background__background_dashboard_afterglow_light_160x40_theme.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"afterglow-light\", (160, 40), BackgroundMode :: Theme)"
---
Rgb(244, 233, 222): 150
Rgb(251, 250, 246): 6250
