crates/review-buddy/tests/snapshots/background__background_dashboard_dusk_100x30_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"dusk\", (100, 30), BackgroundMode :: No)"
---
Reset: 2887
Rgb(49, 38, 40): 113
