crates/review-buddy/tests/snapshots/background__background_dashboard_dusk_100x30_yes.snap
---
source: crates/review-buddy/tests/background.rs
expression: "pinned(\"dusk\", (100, 30), BackgroundMode :: Yes)"
---
Rgb(49, 38, 40): 217
Rgb(5, 5, 7): 2783
