crates/review-buddy/tests/snapshots/background__background_dashboard_dusk_160x40_no.snap
---
source: crates/review-buddy/tests/background.rs
expression: bg_histogram(&buffer)
---
Reset: 6250
Rgb(49, 38, 40): 150
